# gitlore

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  gitlore_unified_spec.md  name_squat_prompt.md  reservations.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.ralph/: .quality_gate_results
crates/gitlore/: Cargo.toml
crates/gitlore-core/: Cargo.toml
crates/gitlore-core/benches/: bench_index.rs
crates/gitlore-core/examples/: run_initial.rs
crates/gitlore-core/src/: config.rs  error.rs  lib.rs  log.rs
crates/gitlore-core/src/config/: mod.rs
crates/gitlore-core/src/git/: cli.rs  mod.rs  refs.rs
crates/gitlore-core/src/index/: classify.rs  classify_report.rs  defaults.classifications.toml  identities_report.rs  identity.rs  indexer.rs  lock.rs  mod.rs  reclassify.rs  schema.rs  status.rs  storage.rs
crates/gitlore-core/src/index/migrations/: 0001_init.sql  0002_identity_is_bot.sql  0003_fts5_backfill_marker.sql  0004_fts5_rebuild_with_content.sql  mod.rs
crates/gitlore-core/src/search/: clock.rs  conn_pool.rs  filters.rs  lexical.rs  mod.rs  orchestrator.rs  path_relevance.rs  query.rs  recency.rs  sha_lookup.rs  types.rs
crates/gitlore-core/tests/: classification_default_globs.rs  concurrency_stale_pid.rs  concurrency_two_indexers.rs  concurrency_wal_checkpoint.rs  index_force_push_retention.rs  index_fts5_backfill.rs  index_incremental.rs  index_initial_full_walk.rs  index_progress.rs  index_resume_after_sigkill.rs  no_git_write_subcommand.rs  search_empty_envelope.rs  search_filters_pre_apply.rs  search_lexical_baseline.rs  search_phrase_query.rs  search_sha_ambiguous.rs  search_sha_lookup_bypass.rs  workspace_layering.rs
crates/gitlore-core/tests/common/: mod.rs
crates/gitlore-eval/: Cargo.toml
crates/gitlore-eval/benches/: search_warm.rs
crates/gitlore-eval/src/: fixtures.rs  lib.rs  metrics.rs  scenarios.rs
crates/gitlore-eval/src/scenarios/: builtin.rs  mod.rs
crates/gitlore-eval/src/scenarios/perf/: cold_index.rs  mod.rs  search_warm.rs
crates/gitlore-eval/src/scenarios/search/: api_nodejs.rs  mod.rs  synthetic.rs
crates/gitlore-eval/tests/: registry_smoke.rs  ro_filesystem.rs
crates/gitlore/src/: cli.rs  lib.rs  main.rs  output.rs
crates/gitlore/src/cli/: search.rs
crates/gitlore/src/output/: human.rs  json.rs  mod.rs
crates/gitlore/src/tui/: app.rs  diff.rs  help.rs  keys.rs  mod.rs  theme.rs
crates/gitlore/src/tui/modes/: mod.rs  search.rs
crates/gitlore/tests/: cli_error_messages.rs  cli_identities_classify.rs  cli_index_status.rs  cli_schema_version_refusal.rs  cli_search_json_envelope.rs  cli_search_smoke.rs  error_not_a_repo.rs  ro_filesystem.rs  search_ro_filesystem.rs  tui_diff.rs  tui_help_overlay.rs  tui_launch_smoke.rs  tui_mode_cycle.rs  tui_search_smoke.rs  tui_theme_resolution.rs
docs/: branch-protection.md
qa/fixtures/: README.md
qa/fixtures/search-synthetic/: queries.yml
squat-artifacts/: README.md
squat-artifacts/crate-gitlore/: Cargo.toml
squat-artifacts/pypi-gitlore/: README.md  pyproject.toml
squat-artifacts/pypi-gitlore/src/gitlore/: __init__.py
tests/: ro_filesystem_integration.rs
