[package]
name = "gitlore-eval"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal evaluation harness for gitlore search / story / risk quality. Not published."
publish = false

[lib]
path = "src/lib.rs"

# Internal evaluation CLI. Wires the M4 + M11 search lanes, M7 story, M8
# risk, and per-pillar perf budget walks into a single entry point so the
# self-hosted eval-regression CI lane (ADR-028) can shell out to one
# binary. Not published; `publish = false` is inherited from `[package]`.
[[bin]]
name = "gitlore-eval"
path = "src/bin/main.rs"

[dependencies]
# Workspace-internal indexer + lock primitives consumed by the M3-7e
# perf gate (`perf.cold_index_api_nodejs`). ADR-005 permits gitlore-eval
# to depend on gitlore-core; it is the only intra-workspace dep allowed.
gitlore-core = { path = "../gitlore-core" }
# CLI surface — clap v4 derive. Picked to match `gitlore` so the
# `gitlore-eval` --help output reads the same way and so we share the
# already-locked clap version in the workspace `Cargo.lock`.
clap = { version = "4", features = ["derive"] }
# Renders the `--json` envelope (scenario report + regression walk +
# unknown-scenario error). Same major already locked in the workspace.
serde_json = "1"
# Fresh tempdirs for each cold-index iteration of the M3-7e perf gate.
# Self-cleaning on drop so we cannot leak state across the three samples.
tempfile = "3"

[lints]
workspace = true

